welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value dir
		dir=getDirection()
                ^ColumnByColumn:5: error: not found: value Direction
		setDirection(Direction.EAST)
                             ^ColumnByColumn:7: error: not found: value Direction
			setDirection(Direction.NORTH)
                                     ^ColumnByColumn:12: error: not found: value dir
		setDirection(dir)
                             ^