welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	def positionFinale():Boolean = {
		var pos:Boolean=false
		dir=getDirection()
		setDirection(Direction.EAST)
		if (estFaceMur) {
			setDirection(Direction.NORTH)
			if (estFaceMur) {pos=true}
			else {pos=false}
		}
		else {pos=false}
		setDirection(dir)
		return pos
		}





	
}
